--- a/index.html
+++ b/index.html
@@ -7,39 +7,35 @@
     <title>Document</title>
   </head>
   <body>
-    <form action="">
-      <div>
-        <header>
-          <h1>Formulario de registro</h1>
-        </header>
-      </div>
-      <div>
-        <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" />
-        <label for="apellido">Apellido:</label>
-        <input type="text" id="apellido" />
-      </div>
-      <div>
-        <label for="modalidad">Modalidad de Cursada:</label>
-        <input type="radio" id="modalidad" />On-Demand
-        <input type="radio" id="modalidad" />En vivo
-      </div>
-      <div>
-        <label for="correo">Correo:</label>
-        <input type="email" id="correo" />
-      </div>
-      <div>
-        <input type="checkbox" id="informacion" />
-        <label for="informacion"
-          >Deseo recibir información sobre nuevos posteos en la plataforma de
-          Nucba.</label>
-          <br>
-        <input type="checkbox" id="declaracion" />
-        <label for="declaracion"
-          >Declaro que lei los terminos y condiciones y estoy listo para
-          convertirme en desarrollador web Full Stack.</label>
-      </div>
-      <button>Enviar</button>
-    </form>
+    <nav>
+      <p><a href="Ejercicio_2_ProgramacionWebFullStack.html">Ejercicio 2</a></p>
+      <p><a href="Ejercicio_3_Forms.html"">Ejercicio 3</a></p>
+    </nav>
+    <article>
+      <header>
+        <h1>Curriculum Vitae de Lionel Messi</h1>
+      </header>
+
+      <section>
+        <h2>Datos Personales</h2>
+        <li>Nombre completo: <strong>Lionel Andrés Messi Cuccitini</strong></li>
+        <li>Fecha de nacimiento: <strong>24/6/1987</strong></li>
+        <li>Lugar de nacimiento: <strong>Rosario - Argentina</strong></li>
+      </section>
+
+      <section>
+        <h2>Trayectoria</h2>
+        <li>1994-1999: <strong>Newell's Old Boys (Inferiores)</strong></li>
+        <li>2000-2021: <strong>Barcelona F.C.</strong></li>
+        <li>2021-2023: <strong>Paris Saint Germain</strong></li>
+      </section>
+
+      <section>
+        <h2>Títulos con la selección</h2>
+        <li>2021:<strong>Copa América Brasil 2021</strong></li>
+        <li>2022:<strong>Finalissima</strong></li>
+        <li>2022:<strong>Copa Mundial de la FIFA - QATAR 2022</strong></li>
+      </section>
+    </article>
   </body>
 </html>
